# codex-demo

./: .gitignore  README.md  pyproject.toml
docs/: README.md
scripts/: README.md
src/: main.py
src/codex_demo/: cli.py
src/codex_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
